# reliefNET-GNN

./: .gitignore  LICENSE  README.md  pyproject.toml
models/explore/global_efficiency/: optuna_study.pkl  top40_archs.csv
models/explore/independent_path/: optuna_study.pkl  top40_archs.csv
models/global_efficiency/version_0/: events.out.tfevents.1747460859.mordor.2231805.0  hparams.yaml  metrics.csv
models/refine/global_efficiency/: optuna_study.pkl  top10.csv
models/refine/independent_path/: optuna_study.pkl  top10.csv
models/validate/global_efficiency/: optuna_study.pkl
models/validate/independent_path/: optuna_study.pkl
notebooks/: #gnn.py#  #parallel_ranking_links2.py#  disrupted_scenarios.ipynb  explore_optuna.py  generate_data.py  gnn.ipynb  parallel_ranking_links.py  parallel_ranking_links2.py  pytorch_datset.py  pytorch_gnn.py  ranking_links.py  testing.py
notebooks/.virtual_documents/: disrupted_scenarios.ipynb
notebooks/lightning_logs/version_0/: metrics.csv
notebooks/lightning_logs/version_1/: metrics.csv
notebooks/lightning_logs/version_10/: events.out.tfevents.1746711076.mordor.1247978.4  events.out.tfevents.1746711326.mordor.1247978.5
notebooks/lightning_logs/version_11/: events.out.tfevents.1746743510.mordor.1247978.6
notebooks/lightning_logs/version_12/: events.out.tfevents.1746744101.mordor.1247978.7  events.out.tfevents.1746744355.mordor.1247978.8
notebooks/lightning_logs/version_13/: events.out.tfevents.1746744970.mordor.1247978.9
notebooks/lightning_logs/version_14/: events.out.tfevents.1746745060.mordor.1247978.10  events.out.tfevents.1746745312.mordor.1247978.11
notebooks/lightning_logs/version_15/: events.out.tfevents.1746745855.mordor.1247978.12  events.out.tfevents.1746746108.mordor.1247978.13
notebooks/lightning_logs/version_16/: events.out.tfevents.1746747165.mordor.1247978.14  events.out.tfevents.1746747418.mordor.1247978.15
notebooks/lightning_logs/version_17/: events.out.tfevents.1746747720.mordor.1247978.16
notebooks/lightning_logs/version_18/: events.out.tfevents.1746747781.mordor.1247978.17
notebooks/lightning_logs/version_19/: events.out.tfevents.1746747949.mordor.1247978.18
notebooks/lightning_logs/version_2/: metrics.csv
notebooks/lightning_logs/version_20/: events.out.tfevents.1746748007.mordor.1247978.19
notebooks/lightning_logs/version_21/: events.out.tfevents.1746748387.mordor.1247978.20
notebooks/lightning_logs/version_22/: events.out.tfevents.1746748407.mordor.1525785.0  events.out.tfevents.1746748736.mordor.1525785.1
notebooks/lightning_logs/version_23/: events.out.tfevents.1746748934.mordor.1525785.2  events.out.tfevents.1746749266.mordor.1525785.3  hparams.yaml
notebooks/lightning_logs/version_24/: events.out.tfevents.1746749922.mordor.1540169.0  events.out.tfevents.1746750206.mordor.1540169.1
notebooks/lightning_logs/version_25/: events.out.tfevents.1746750234.mordor.1540169.2  events.out.tfevents.1746750519.mordor.1540169.3
notebooks/lightning_logs/version_26/: events.out.tfevents.1746764276.mordor.1540169.4  events.out.tfevents.1746764561.mordor.1540169.5
notebooks/lightning_logs/version_27/: events.out.tfevents.1746770238.mordor.1540169.6
notebooks/lightning_logs/version_28/: events.out.tfevents.1746770548.mordor.1540169.7
notebooks/lightning_logs/version_29/: events.out.tfevents.1746770939.mordor.1540169.8
notebooks/lightning_logs/version_3/: metrics.csv
notebooks/lightning_logs/version_30/: events.out.tfevents.1746771037.mordor.1540169.9
notebooks/lightning_logs/version_31/: events.out.tfevents.1746771076.mordor.1540169.10
notebooks/lightning_logs/version_32/: events.out.tfevents.1746775829.mordor.1540169.11
notebooks/lightning_logs/version_33/: events.out.tfevents.1746775950.mordor.1540169.12
notebooks/lightning_logs/version_34/: events.out.tfevents.1746775990.mordor.1670359.0
notebooks/lightning_logs/version_35/: events.out.tfevents.1746776091.mordor.1670359.1
scripts/: #rank_graphs.py#  explore_gnn.py  generate_networks.py  testing.py
scripts/.virtual_documents/: Untitled.ipynb
src/reliefnet_gnn/: __init__.py  config.py
src/vulnerability_networks/: .lr_find_2d42d297-e80c-4328-b07f-3ea233a5109c.ckpt  .lr_find_713e8488-1bfc-47ee-9371-54089fc09ee0.ckpt  config.py  dataset.py  features.py  logging.py  losses.py  metrics.py
(+2509 files in other folders)
