[project]
name = "reliefnet-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Aguirre", email = "danielaguirre722@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
reliefnet-gnn = "reliefnet_gnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
