[project]
name = "reliefnet-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Aguirre", email = "danielaguirre722@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "networkx>=3.5",
]

[project.scripts]
reliefnet-gnn = "reliefnet_gnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jedi-language-server>=0.45.1",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
